<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>it.sunnyvale.academy.jsenewfeatures</groupId>
    <artifactId>java2d</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.7</maven.compiler.source>
        <maven.compiler.target>1.7</maven.compiler.target>
        <exec.mainClass>java2d.Java2Demo</exec.mainClass>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>java</executable>
                    <arguments>
                        <!-- GC -->
                        <argument>-verbose:gc</argument>
                        <argument>-Xloggc:gc.log</argument>
                        <argument>-XX:+PrintGCTimeStamps</argument>
                        <argument>-XX:+PrintGCDateStamps</argument>
                        <argument>-XX:+PrintGCDetails</argument>
                        <argument>-XX:+PrintGCApplicationStoppedTime</argument>
                        <argument>-XX:+PrintGCApplicationConcurrentTime</argument>
                        <argument>-XX:+UseGCLogFileRotation</argument>
                        <argument>-XX:NumberOfGCLogFiles=5</argument>
                        <argument>-XX:GCLogFileSize=2M</argument>
                        <argument>-XX:+PrintFlagsFinal</argument> 
                        <!-- G1 
                        <argument>-XX:+UseG1GC</argument>
                        <argument>-XX:MaxGCPauseMillis=200</argument>
                        <argument>-XX:InitiatingHeapOccupancyPercent=45</argument>
                        <argument>-XX:G1ReservePercent=10</argument>
                        <argument>-XX:ConcGCThreads=2</argument>-->
                        <!-- Flight Recorder
                        <argument>-XX:+UnlockCommercialFeatures</argument>
                        <argument>-XX:+FlightRecorder</argument>
                        <argument>-XX:FlightRecorderOptions=defaultrecording=true,settings=super_verbose_jfr_template.jfc</argument>-->
                        <!-- Classpath -->
                        <argument>-classpath</argument>
                        <classpath/>
                        <!-- Main class -->
                        <argument>java2d.Java2Demo</argument>
                    </arguments>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
        </dependency>
    </dependencies>
</project>
